--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /*NAVEGADOR*/
 
+
+
 .bg-nav{
     background: #ff8066;
 }
@@ -17,17 +19,25 @@
     border-radius: 5px;
 }
 
-.bg-nav .navbar-nav .nav-link{
-    color: #f9f9f9;
+.nav-item {
+    margin: 0 4px;
 }
 
+.nav-item .nav-link {
+    padding: 20px !important;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    color: #f9f9f9 !important;
+} 
 
 .bg-nav .navbar-nav .nav-link:hover{
-    padding: 6px;
-    color: #f9f9f9;
+    color: #f9f9f9 !important;
     background: #de6b6b;
     border-radius: 4px;
 }
+
+
 
 .btn-outline-success{
     background:#ff8066;
@@ -156,3 +166,4 @@ footer{
     text-align: center;
     height: 80%;
 }
+
